# pereval_api

./: .env.example  Dockerfile  README.md  Read.me  conftest.py  data_for_tests.py  docker-compose.yml  examples_api_requests.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt  test_db_pereval.py
.github/workflows/: ci.yml  deploy_to_yc.yml
alembic/: env.py
alembic/versions/: 11ecf93ab447_initial_migration.py  177f0cc03e0b_initial_migration.py
src/: app.py  db_dependency.py  exceptions.py  main.py
src/api/: __init__.py
src/api/v1/: pereval.py
src/core/: config.py  logger.py
src/db/: db.py
src/dependencies/: db_dependency.py
src/models/: __init__.py  base.py  pereval.py
src/schemas/: __init__.py  pereval.py
src/services/: pereval.py
tests/: conftest.py  test_db_pereval.py
